# photometry-plugin

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  launcher.py  pyproject.toml  test.ipynb
.ipynb_checkpoints/: test-checkpoint.ipynb
aiida_photometry/: utils.py
aiida_photometry.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
aiida_photometry/calcfunctions/: __init__.py  aperture.py  background.py  calibration.py  centroids.py
aiida_photometry/data/: fits_data.py
aiida_photometry/workflows/: aperture_photometry.py  background_wc.py  centroids_detection.py  data_reduction.py  photo_pipeline.py
data/: fit_data.py
examples/: aperture_example.py  launcher.py  science.fits
notebooks/: plot_images.ipynb
workflows/: data_reduction.py  fill_workflow.py
