[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "aiida_photometry"

[project]
name = "aiida_photometry"
version = "0.1.0a0"
readme = "README.md"
license = {file = 'LICENSE'}
description = "plugin for photometry"
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Framework :: AiiDA",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",

]
requires-python = ">=3.9"
dependencies = [
    "aiida-core>=1.6.5,<3.0.0",
]

[project.entry-points."aiida.data"]
"fits.data" = "aiida_photometry.data.fits_data:FitsData"

[project.entry-points."aiida.workflows"]
"images.reduction" = "aiida_photometry.workflows.data_reduction:DataReduction"
"aperture.photometry" = "aiida_photometry.workflows.aperture_photometry:AperturePhotometry"
